Fix h3 tags on mobile

--- a/catalogue_app/static/style.css
+++ b/catalogue_app/static/style.css
@@ -118,6 +118,7 @@ table {
 #about-page h3 {
 	margin: 1.5em 0;
 	color: green;
+	text-align: left;
 }
 /***** End home and about *****/
 
